fixed first point visibility, added a border around the map in edit mode to make it more obvious as it loads

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -623,6 +623,7 @@ h2.bottom {
 .edit .frame {
     right: 0;
     .transition(right);
+    border-left: 1px solid @borderGrey;
 }
 
 .map .layer {
